  instance of a specific class i.e.:  "string" isa ^String
- added a better error message for class cast exceptions caught w/i
  the interpreter.
- added a $__SCRIPT__ variable to indicate the name of the executed
  script when running a Sleep script from the command line.
- added a typeOf($scalar) function to retrieve the class backing the
  specified scalars value.  

2.1-beta 16  (11 Jun 07)
===========
- passing a value that can not be used as a key/value pair when a kvp 
  is expected now results in an error message.   valid kvp's include:
  expressions of (key => value) and strings with the form "key=value"
- added getIOHandle(InputStream, OutputStream) to SleepUtilities class
- registered cmp operator to prevent parser confusing it with a function
- hashes/arrays can now be passed as named parameters to closures
- &size now works with hashes
- the '.' command in the console interact mode will not repeat the last
  code sequence if no new code has been specified.
- fixed a bug with &let, &lambda: when a ($this => ...) is specified
  all subsequent variable placements will be put into the shared this
  scope.
- &compile_closure now shares its implementation with &let, &lambda 
  allowing it to function as they do for settings vars, passing $this 
  scope, etc..
- &join, &flatten functions now accept either a sleep array or generator
  function.
- &readObject no longer throws an EOFException.
- added another debug mode: DEBUG_TRACE_LOGIC (64); use this to trace
  the results of all predicate evaluations
- cleaned up the code in BasicNumbers a bit to reduce the file size
- cleaned up the implementation of &remove(%|@, ...), the function now
  removes based on values (and not keys); comparisons are made as follows
  hashes, arrays, and object scalars are compared by reference, everything
  else is checked by string value.
- fixed improper uses of (<Scalar>n).getValue() throughout the Sleep codebase.