@@ -1,0 +1,10 @@
+Trace: &exit('argh! tied to pass a 0 value') - FAILED! at assertp.sl:10
+Warning: argh! tied to pass a 0 value at assertp.sl:10
+Trace: &fact(-1) - FAILED! at assertp.sl:11
+Trace: &fact(0) - FAILED! at assertp.sl:11
+Trace: &fact(1) - FAILED! at assertp.sl:11
+Trace: &fact(2) - FAILED! at assertp.sl:11
+Trace: &fact(3) - FAILED! at assertp.sl:11
+Trace: &fact(4) - FAILED! at assertp.sl:11
+Trace: &fact(5) - FAILED! at assertp.sl:11
+Trace: &fact(6) - FAILED! at assertp.sl:14
